trunk/plugins/abc/abcp-0.1a/abcplib/src/abcpbar.c
/* Generated by re2c 0.5 on Fri Dec 31 13:56:18 2004 */
#line 1 "abcpbar.re"
#include "abcp.h"


/*



1 |   T_BAR_SINGLE
2 |]  T_BAR_THIN_THICK
3 ||  T_BAR_THIN_THIN
4 [|  T_BAR_THIN_THICK
5 |:  T_BAR_START_1
6 :|  T_BAR_END_1
7 ::  T_BAR_ENDSTART_1
8 .|  dotted
9 [|] Invisible

  |ETes
     \\__ repsstart
      \__ repsend
     
      
      
 |:::  :::|::  ::|

*/

#line 36



char *abcNBar(char *pak, char *str)
{
  char *t;char c;
  int m=0, d=0,n=1;
  YYCTYPE *YYCURSOR,*YYLIMIT,*YYMARKER,*YYSTART;

  if (str==NULL || pak==NULL) return NULL;
  
  YYCURSOR=str; skipspace(YYCURSOR);
  YYLIMIT=str;  while (*YYLIMIT) YYLIMIT++;
    
             /*012345678901234567890123456789*/
  setpack(pak,"|ETes");  
 
  
  pak[3]='0'; pak[4]='0';
  
  {
	YYCTYPE yych;
	unsigned int yyaccept;
	goto yy0;
yy1:	++YYCURSOR;
yy0:
	if((YYLIMIT - YYCURSOR) < 3) YYFILL(3);
	yych = *YYCURSOR;
	if(yych <= ':'){
		if(yych == '.')	goto yy6;
		if(yych <= '9')	goto yy9;
		goto yy7;
	} else {
		if(yych <= '['){
			if(yych <= 'Z')	goto yy9;
			goto yy4;
		} else {
			if(yych != '|')	goto yy9;
			goto yy2;
		}
	}
yy2:	yych = *++YYCURSOR;
	if(yych <= '\\'){
		if(yych == ':')	goto yy16;
		goto yy3;
	} else {
		if(yych <= ']')	goto yy20;
		if(yych == '|')	goto yy18;
		goto yy3;
	}
yy3:
#line 67
	{ pak[2] = '1'; GOTO(done);}
yy4:	yych = *++YYCURSOR;
	if(yych == '|')	goto yy12;
	goto yy5;
yy5:
#line 69
	{ setperr(pak,1); GOTO(done); }
yy6:	yych = *++YYCURSOR;
	if(yych == '|')	goto yy10;
	goto yy5;
yy7:	yych = *++YYCURSOR;
	goto yy8;
yy8:
#line 64
	{ d=1; GOTO(reps_end); }
yy9:	yych = *++YYCURSOR;
	goto yy5;
yy10:	yych = *++YYCURSOR;
	goto yy11;
yy11:
#line 61
	{ pak[2] = '8'; GOTO(done);}
yy12:	yych = *++YYCURSOR;
	if(yych == ']')	goto yy14;
	goto yy13;
yy13:
#line 60
	{ pak[2] = '4'; GOTO(done);}
yy14:	yych = *++YYCURSOR;
	goto yy15;
yy15:
#line 62
	{ pak[2] = '9'; GOTO(done);}
yy16:	yych = *++YYCURSOR;
	goto yy17;
yy17:
#line 65
	{ m=1; GOTO(reps_start); }
yy18:	yych = *++YYCURSOR;
	goto yy19;
yy19:
#line 59
	{ pak[2] = '3'; GOTO(done);}
yy20:	yych = *++YYCURSOR;
	goto yy21;
yy21:
#line 58
	{ pak[2] = '2'; GOTO(done);}
}
#line 71
  
 
  STATE(reps_end) {
    
    {
	YYCTYPE yych;
	unsigned int yyaccept;
	goto yy22;
yy23:	++YYCURSOR;
yy22:
	if(YYLIMIT == YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	if(yych <= ':'){
		if(yych <= '\000')	goto yy27;
		if(yych >= ':')	goto yy25;
		goto yy24;
	} else {
		if(yych == '|')	goto yy29;
		goto yy24;
	}
yy24:yy25:	yych = *++YYCURSOR;
	goto yy26;
yy26:
#line 76
	{ d++; GOTO(reps_end);}
yy27:	yych = *++YYCURSOR;
	goto yy28;
yy28:
#line 78
	{ m=d>1; d-=m;
                GOTO(reps_found); }
yy29:	yych = *++YYCURSOR;
	goto yy30;
yy30:
#line 81
	{ GOTO(skip_bars); }
}
#line 82

  }

  STATE(skip_bars) {
    {
	YYCTYPE yych;
	unsigned int yyaccept;
	goto yy31;
yy32:	++YYCURSOR;
yy31:
	if(YYLIMIT == YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	if(yych <= ':'){
		if(yych <= '\000')	goto yy37;
		if(yych <= '9')	goto yy39;
		goto yy35;
	} else {
		if(yych != '|')	goto yy39;
		goto yy33;
	}
yy33:	yych = *++YYCURSOR;
	goto yy34;
yy34:
#line 87
	{ GOTO(skip_bars); }
yy35:	yych = *++YYCURSOR;
	goto yy36;
yy36:
#line 88
	{ m++; GOTO(reps_start); }
yy37:	yych = *++YYCURSOR;
	goto yy38;
yy38:
#line 89
	{ GOTO(reps_found); }
yy39:	yych = *++YYCURSOR;
	goto yy40;
yy40:
#line 90
	{ setperr(pak,2); GOTO(done); }
}
#line 91

  }
  
  STATE(reps_start) {
    {
	YYCTYPE yych;
	unsigned int yyaccept;
	goto yy41;
yy42:	++YYCURSOR;
yy41:
	if(YYLIMIT == YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	if(yych <= '\000')	goto yy45;
	if(yych != ':')	goto yy47;
	goto yy43;
yy43:	yych = *++YYCURSOR;
	goto yy44;
yy44:
#line 96
	{ m++; GOTO(reps_start); }
yy45:	yych = *++YYCURSOR;
	goto yy46;
yy46:
#line 97
	{ GOTO(reps_found); }
yy47:	yych = *++YYCURSOR;
	goto yy48;
yy48:
#line 98
	{ setperr(pak,3); GOTO(done); }
}
#line 99

  }
  
  STATE(reps_found) {
    pak[2] = '0';
    pak[3] = '0'+d;
    pak[4] = '0'+m;
    GOTO(done);
  }
    
  STATE(done)
    return pak;
}

